--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "tracking": "^1.1.3",
     "view-design": "^4.3.2",
     "voice-input-button2": "^1.1.9",
     "vue": "^2.6.11",
+    "vue-pdf": "^4.1.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
